Fix CCJ-73: prevent new UI styling from interfering with Ozaria
Also fix an existing bug with black dialogue view background
overlapping loading screen in Ozaria.

--- a/app/styles/play/level/level-loading-view.sass
+++ b/app/styles/play/level/level-loading-view.sass
@@ -18,14 +18,15 @@ $UNVEIL_TIME: 1.2s
 #level-loading-view
   @if $is-codecombat
     position: absolute
+    z-index: 21
   @else
     position: fixed
     background-color: $eve
+    z-index: 1002
   top: 0
   bottom: 0
   left: 0
   right: 0
-  z-index: 21
 
   @if $is-codecombat
     &.unveiled
